--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^7.26.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
